--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
 
+    <link rel="shortcut icon" href="favicon (1).ico" type="image/x-icon" />
+
     <title>Fall Through Time</title>
 
     <!-- Latest compiled and minified CSS -->
@@ -24,7 +26,12 @@
   </head>
   <body>
 
-    
+    <br>
+    <br>
+
+    <div class="container title1">
+      <h1>Fall Through Time</h1>
+    </div>
 
   </body>
 </html>
