--- a/index.html
+++ b/index.html
@@ -29,9 +29,138 @@
     <br>
     <br>
 
-    <div class="container title1">
-      <h1>Fall Through Time</h1>
+    <div class="container titlediv">
+
+      <br>
+      <br>
+
+      <h1 class="titletext">Fall Through Time</h1>
+
+      <br>
+      <br>
+
+      <img src="Images\1.jpg"/>
+
+      <br>
+      <h4>Spring comes and things start to grow.</h4>
+      <br>
+      <br>
+      <br>
+
+      <img src="Images\2.jpg"/>
+
+      <br>
+      <h4>Trees are full of leaves.</h4>
+      <br>
+      <br>
+      <br>
+
+      <img src="Images\3.jpg"/>
+
+      <br>
+      <h4>New trees start growing.</h4>
+      <br>
+      <br>
+      <br>
+
+      <img src="Images\4.jpg"/>
+
+      <br>
+      <h4>To become big in years to come.</h4>
+      <br>
+      <br>
+      <br>
+
+      <img src="Images\5.jpg"/>
+
+      <br>
+      <h4>Than fall come and the leaves start to change colours.</h4>
+      <br>
+      <br>
+      <br>
+
+      <img src="Images\6.jpg"/>
+
+      <br>
+      <h4>They change to beautiful colours.</h4>
+      <br>
+      <br>
+      <br>
+
+      <img src="Images\7.jpg"/>
+
+      <br>
+      <h4>Some trees change quicker than others.</h4>
+      <br>
+      <br>
+      <br>
+
+      <img src="Images\8.jpg"/>
+
+      <br>
+      <h4>But before you know it, leaves start to fall.</h4>
+      <br>
+      <br>
+      <br>
+
+      <img src="Images\9.jpg"/>
+
+      <br>
+      <h4>Leaves leave the tree naked.</h4>
+      <br>
+      <br>
+      <br>
+
+      <img src="Images\10.jpg"/>
+
+      <br>
+      <h4>Some leaves fall before changing.</h4>
+      <br>
+      <br>
+      <br>
+
+      <img src="Images\11.jpg"/>
+
+      <br>
+      <h4>The leaves end up not here, but...</h4>
+      <br>
+      <br>
+      <br>
+
+      <img src="Images\12.jpg"/>
+
+      <br>
+      <h4>...everywhere else!</h4>
+      <br>
+      <br>
+      <br>
+
+      <img src="Images\13.jpg"/>
+
+      <br>
+      <h4>Leaves everywhere make fun to play in.</h4>
+      <br>
+      <br>
+      <br>
+
+      <img src="Images\14.jpg"/>
+
+      <br>
+      <h4>Then the cold comes and the leaves wait for another year to come.</h4>
+      <br>
+      <br>
+      <br>
+
+
+      <br>
+      <br>
+
+      <p>Made by Marc Boivin</p>
+
     </div>
+
+    <br>
+    <br>
 
   </body>
 </html>
