--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
   </head>
   <body>
 
-    <br>
-    <br>
-
-    <div class="container titlediv">
+    <div class="titlediv">
 
       <br>
       <br>
@@ -158,9 +155,6 @@
       <p>Made by Marc Boivin</p>
 
     </div>
-
-    <br>
-    <br>
 
   </body>
 </html>
