--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <br>
       <br>
 
-      <img src="Images\1.jpg"/>
+      <img src="1.jpg"/>
 
       <br>
       <h4>Spring comes and things start to grow.</h4>
@@ -44,7 +44,7 @@
       <br>
       <br>
 
-      <img src="Images\2.jpg"/>
+      <img src="2.jpg"/>
 
       <br>
       <h4>Trees are full of leaves.</h4>
@@ -52,7 +52,7 @@
       <br>
       <br>
 
-      <img src="Images\3.jpg"/>
+      <img src="3.jpg"/>
 
       <br>
       <h4>New trees start growing.</h4>
@@ -60,7 +60,7 @@
       <br>
       <br>
 
-      <img src="Images\4.jpg"/>
+      <img src="4.jpg"/>
 
       <br>
       <h4>To become big in years to come.</h4>
@@ -68,7 +68,7 @@
       <br>
       <br>
 
-      <img src="Images\5.jpg"/>
+      <img src="5.jpg"/>
 
       <br>
       <h4>Than fall come and the leaves start to change colours.</h4>
@@ -76,7 +76,7 @@
       <br>
       <br>
 
-      <img src="Images\6.jpg"/>
+      <img src="6.jpg"/>
 
       <br>
       <h4>They change to beautiful colours.</h4>
@@ -84,7 +84,7 @@
       <br>
       <br>
 
-      <img src="Images\7.jpg"/>
+      <img src="7.jpg"/>
 
       <br>
       <h4>Some trees change quicker than others.</h4>
@@ -92,7 +92,7 @@
       <br>
       <br>
 
-      <img src="Images\8.jpg"/>
+      <img src="8.jpg"/>
 
       <br>
       <h4>But before you know it, leaves start to fall.</h4>
@@ -100,7 +100,7 @@
       <br>
       <br>
 
-      <img src="Images\9.jpg"/>
+      <img src="9.jpg"/>
 
       <br>
       <h4>Leaves leave the tree naked.</h4>
@@ -108,7 +108,7 @@
       <br>
       <br>
 
-      <img src="Images\10.jpg"/>
+      <img src="10.jpg"/>
 
       <br>
       <h4>Some leaves fall before changing.</h4>
@@ -116,7 +116,7 @@
       <br>
       <br>
 
-      <img src="Images\11.jpg"/>
+      <img src="11.jpg"/>
 
       <br>
       <h4>The leaves end up not here, but...</h4>
@@ -124,7 +124,7 @@
       <br>
       <br>
 
-      <img src="Images\12.jpg"/>
+      <img src="12.jpg"/>
 
       <br>
       <h4>...everywhere else!</h4>
@@ -132,7 +132,7 @@
       <br>
       <br>
 
-      <img src="Images\13.jpg"/>
+      <img src="13.jpg"/>
 
       <br>
       <h4>Leaves everywhere make fun to play in.</h4>
@@ -140,7 +140,7 @@
       <br>
       <br>
 
-      <img src="Images\14.jpg"/>
+      <img src="14.jpg"/>
 
       <br>
       <h4>Then the cold comes and the leaves wait for another year to come.</h4>
